--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="./style.css">
 
 </head>
-
+<main>
 <body>
-    <h1>Teste seus conhecimentos</h1>
+    <header>
+        <img src="./img/logo.png" alt="logo do NEXT LEVEL WEEK da Rocketseat">
+        <h1>Teste seus conhecimentos</h1>
+    </header>
+    
 
     <div id="quiz"></div>
 
@@ -36,5 +40,6 @@
 
     <script src="./script.js"></script>
 </body>
+</main>
 
 </html>
